# Maths

./: README.md  pyproject.toml
python/: trapezium_rule_integration.py
